--- a/C02/ex01/Makefile
+++ b/C02/ex01/Makefile
@@ -1,4 +1,4 @@
-SRCS =  main.cpp
+SRCS =  main.cpp fixed.cpp  
 OBJS = $(SRCS:.cpp=.o)
 # DEPS = $(SRCS:.cpp=.d)
 
@@ -9,7 +9,7 @@ CFLAGS = -Wall -Wextra -Werror -std=c++98
 # CFLAGS += -fsanitize=address
 INCLUDE = -I. 
 
-NAME = main
+NAME = fixed
 
 all: $(NAME)
 
