--- a/C03/ex01/Makefile
+++ b/C03/ex01/Makefile
@@ -1,4 +1,4 @@
-SRCS =  main.cpp fixed.cpp  
+SRCS =  main.cpp ClapTrap.cpp ScavTrap.cpp
 OBJS = $(SRCS:.cpp=.o)
 # DEPS = $(SRCS:.cpp=.d)
 
@@ -9,7 +9,7 @@ CFLAGS = -Wall -Wextra -Werror -std=c++98
 # CFLAGS += -fsanitize=address
 INCLUDE = -I. 
 
-NAME = fixed
+NAME = ClapTrap
 
 all: $(NAME)
 
