--- a/C01/ex01/Makefile
+++ b/C01/ex01/Makefile
@@ -2,7 +2,7 @@ SRCS =  Zombie.cpp main.cpp zombieHorde.cpp
 OBJS = $(SRCS:.cpp=.o)
 # DEPS = $(SRCS:.cpp=.d)
 
-CC = g++
+CC = c++
 CFLAGS = -Wall -Wextra -Werror -std=c++98 
 # CFLAGS += MMD
 # CFLAGS += -g3
@@ -20,6 +20,9 @@ $(NAME): $(OBJS)
 
 clean:
 	rm -f $(OBJS) 
+
+%.o: %.cpp
+	$(CC) -c -Wall -Wextra -Werror -std=c++98 -o $@ $<
 
 fclean: clean
 	rm -f $(NAME)
