--- a/C01/ex03/Makefile
+++ b/C01/ex03/Makefile
@@ -2,7 +2,7 @@ SRCS =   main.cpp Weapon.cpp HumanA.cpp HumanB.cpp
 OBJS = $(SRCS:.cpp=.o)
 # DEPS = $(SRCS:.cpp=.d)
 
-CC = g++
+CC = c++
 CFLAGS = -Wall -Wextra -Werror -std=c++98 
 # CFLAGS += MMD
 # CFLAGS += -g3
@@ -24,6 +24,8 @@ clean:
 fclean: clean
 	rm -f $(NAME)
 
+%.o: %.cpp
+	$(CC) -c -Wall -Wextra -Werror -std=c++98 -o $@ $<
 re: fclean all
 
 leak: $(NAME)
