--- a/C02/ex00/Makefile
+++ b/C02/ex00/Makefile
@@ -2,7 +2,7 @@ SRCS =  main.cpp fixed.cpp
 OBJS = $(SRCS:.cpp=.o)
 # DEPS = $(SRCS:.cpp=.d)
 
-CC = g++
+CC = c++
 CFLAGS = -Wall -Wextra -Werror -std=c++98 
 # CFLAGS += MMD
 # CFLAGS += -g3
@@ -17,6 +17,8 @@ $(NAME): $(OBJS)
 	$(CC) $(CFLAGS) $(INCLUDE) -o $(NAME) $(OBJS)
 
 # -include $(DEPS)
+%.o: %.cpp
+	$(CC) -c -Wall -Wextra -Werror -std=c++98 -o $@ $<
 
 clean:
 	rm -f $(OBJS) 
