--- a/C04/ex00/Makefile
+++ b/C04/ex00/Makefile
@@ -17,6 +17,8 @@ $(NAME): $(OBJS)
 	$(CC) $(CFLAGS) $(INCLUDE) -o $(NAME) $(OBJS)
 
 # -include $(DEPS)
+%.o: %.cpp
+	$(CC) -c -Wall -Wextra -Werror -std=c++98 -o $@ $<
 
 clean:
 	rm -f $(OBJS) 
