--- a/C03/ex00/Makefile
+++ b/C03/ex00/Makefile
@@ -17,7 +17,9 @@ $(NAME): $(OBJS)
 	$(CC) $(CFLAGS) $(INCLUDE) -o $(NAME) $(OBJS)
 
 # -include $(DEPS)
-
+%.o: %.cpp
+	$(CC) -c -Wall -Wextra -Werror -std=c++98 -o $@ $<
+	
 clean:
 	rm -f $(OBJS) 
 
