--- a/C03/ex02/Makefile
+++ b/C03/ex02/Makefile
@@ -18,6 +18,9 @@ $(NAME): $(OBJS)
 
 # -include $(DEPS)
 
+%.o: %.cpp
+	$(CC) -c -Wall -Wextra -Werror -std=c++98 -o $@ $<
+
 clean:
 	rm -f $(OBJS) 
 
