--- a/C07/ex00/Makefile
+++ b/C07/ex00/Makefile
@@ -1,4 +1,4 @@
-SRCS= main.cpp Bureaucrat.cpp Intern.cpp AForm.cpp PresidentialPardonForm.cpp RobotomyRequestForm.cpp ShrubberyCreationForm.cpp
+SRCS= main.cpp 
 OBJS = $(SRCS:.cpp=.o)
 DEPS = $(SRCS:.cpp=.d)
 
@@ -9,7 +9,7 @@ CXXFLAGS += -MMD
 # CFLAGS += -fsanitize=address
 INCLUDE = -I. 
 
-NAME = bureaucrat
+NAME = template
 
 all: $(NAME)
 
