--- a/C07/.vscode/settings.json
+++ b/C07/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
 	"files.associations": {
+		"string_view": "cpp",
+		"fstream": "cpp",
 		"array": "cpp",
 		"atomic": "cpp",
 		"bit": "cpp",
@@ -30,12 +32,10 @@
 		"optional": "cpp",
 		"random": "cpp",
 		"string": "cpp",
-		"string_view": "cpp",
 		"system_error": "cpp",
 		"tuple": "cpp",
 		"type_traits": "cpp",
 		"utility": "cpp",
-		"fstream": "cpp",
 		"initializer_list": "cpp",
 		"iosfwd": "cpp",
 		"iostream": "cpp",
@@ -49,8 +49,6 @@
 		"stdexcept": "cpp",
 		"streambuf": "cpp",
 		"typeinfo": "cpp",
-		"ctime": "cpp",
-		"iomanip": "cpp",
-		"sstream": "cpp"
+		"*.tpp": "cpp"
 	}
 }
